<resources>
    <string name="app_name">Familylada</string>
    <string name="title_activity_app">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_collections">Collections</string>
    <string name="events_title">Events</string>
    <string name="members_title">Members</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="create_account">Create account</string>
    <string name="phone">Phone number</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="search">Search…</string>
    <string name="status">Status…</string>
    <string name="hobbies">Hobbies</string>
    <string name="editHobbies">Edit</string>
    <string name="save_changes">Save changes</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="familylada">Familylada</string>
    <string name="edit_account">Edit account</string>
    <string name="logout">Logout</string>
    <string name="family_map">Family map</string>
    <string name="add_new_media">Add New Media</string>
    <string name="add_text_post">Add Text Post</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="add_voice_recording">Add Voice Recording</string>
    <string name="image">Image</string>
    <string name="album_cover">Album Cover</string>
    <string name="add_new_collection">Add New Collection</string>
    <string name="add_event">Add Event</string>
    <string name="open_event">Open</string>
    <string name="chip_all_events_text">All</string>
    <string name="chip_past_events_text">Past</string>
    <string name="chip_upcoming_events_text">Upcoming</string>
</resources>
