<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hills_studio.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.hills_studio.ui.collections.CollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.hills_studio.ui.events.EventsFragment"
        android:label="@string/events_title"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/navigation_members"
        android:name="com.hills_studio.ui.members.MembersFragment"
        android:label="@string/members_title"
        tools:layout="@layout/fragment_members" />
</navigation>